fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,7 @@ hr {
 }
 
 .hr-job-desc {
-  margin-top: 15px;
-  margin-bottom: 10px;
+  margin-top: 8px;
   opacity: 0.5;
 }
 
